--- a/src/containers/PedalBuilder.css
+++ b/src/containers/PedalBuilder.css
@@ -6,10 +6,12 @@ div.container {
   --blur2: .5rem;
   --color-light: rgb(170, 177, 177);
   --color-dark: rgb(13, 23, 23);  
+  
+  
   background-color: #282c34;
   width: 70%;
   height: 500px;
-  margin: 4rem auto 0 auto;
+  margin: 4rem auto 4rem auto;
   border-radius: 4px;
 
   box-shadow: var(--h1) var(--h1) var(--blur1) var(--color-dark), 
@@ -17,14 +19,6 @@ div.container {
 
   display: grid;
   grid-template-columns: 20% auto;
-
-}
-
-div.components {
-  overflow: scroll;
-  background-color: #353c37;
-  padding: 0;
-  margin: 0;
 }
 
 div.workspace {
@@ -32,22 +26,3 @@ div.workspace {
   text-align: center;
 }
 
-ul {
-  padding: 0;
-  margin: 0;
-  display: inline-block;
-  text-align: center;
-}
-
-li {
-  display: inline-block;
-  width: 100%;
-  margin-top: 10px;
-  text-decoration: none;
-  list-style: none;
-  height: 3rem;
-  color: #fff;
-  font-weight: 600;
-  box-shadow: inset var(--h1) var(--h1) var(--blur1) var(--color-dark), 
-              inset var(--h2) var(--h2) var(--blur2) var(--color-light);
-}
